k8s/service.yaml
# 1.vim service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shf-id-generator-server
  namespace: dev
spec:
  type: NodePort
  selector:
    app: shf-id-generator-server
  ports:
    - port: 80
      targetPort: 80
      nodePort: 9192
